2013-02-11  Dario Rodriguez <dario@artica.es>

	* godmode/usuarios/configurar_usuarios.php: Fixed an error updating
	admin users related to enable login parameter.

2013-02-11  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/type_detail.php: Fixed bug: 
	Its possible to define a custom incident field of type combo
	without any value.

2013-02-11  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: Fixed bug: 
	Close by field always available.

2013-02-11  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_db.php
	  include/functions_incidents.php
	  operation/incidents/incident_search.php: Fixed bug: 
	"Pending on a third person" status is marked as closed in UI.

2013-02-11  Vanessa Gil <vanessa.gil@artica.es>

	* include/styles/integria.css
	  operation/incidents/incident_detail.php: Changed custom
	fields style.

2013-02-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php: Improved print_input_image function.
	
	* include/functions_config.php
     include/config_process.php: Added development by pass var.
	
	* include/functions_objects.php: Function library for inventory 
	objects.
	
	* index.php: Fixed non-initialized variables.
	
	* operation/side_menu.php: Changed menu for new object views.
	
	* operation/inventories/manage_objects.php
	 operation/inventories/manage_objects_types_list.php
	 operation/inventories/manage_objects_types_field.php: Added views
	 for manage object and fields of inventories.

	* images/objects: Added images.

	* integria_db.sql
	  integria_demo.sql
	  extras/migrate.sql: Added objcet new tables and fields and removed
	  inventories.
 
	* godmode/setup/incidents_setup.php
	 godmode/setup/setup.php
	 godmode/setup/setup_mail.php
	 godmode/setup/setup_pandora.php
	 godmode/setup/setup_auth.php
	 godmode/setup/setup_mailtemplates.php
	 godmode/setup/setup_visual.php: Removed link to inventory fields old
	 view.
